--- a/Maischer/MaischerClient.html
+++ b/Maischer/MaischerClient.html
@@ -25,32 +25,25 @@
         </div>
       </div>
 
-      <div>
-        The select Brewage:
-        <select id="BrewageList">
-        <input id="pbOpenBrewage"       type="button" value="Open Brewage" onclick="OpenBrewage();" disabled />
-        <input id="pbShowConfiguration" type="button" value="Show Configuration" disabled/>
-      </div>      
-      <div>      
+      <div id="wrapper"> 
         <div>
-          Output in %: 
-          Process Value: <input readonly type="number" id="OutputPV" value="0"> 
-          SetPoint     : <input type="number" step="1" id="OutputSP" value="0">
-          <input type="submit" value="Submit" onclick="SetOutput();" />
+          The select Brewage:
+          <select id="BrewageList">
+          <input id="pbOpenBrewage"       type="button" value="Open Brewage" onclick="OpenBrewage();" disabled />
+          <input id="pbShowConfiguration" type="button" value="Show Configuration" disabled/>
+        </div>      
+        <div>
+          Temperature: 
+          Process Value: <input readonly type="number" id="TemperaturePV" value="0.0"> 
+          SetPoint     : <input type="number" step="0.1" id="TemperatureSP" value="0.0">
+          <input type="submit" value="Submit" onclick="SetTemperature();" />
+        </div>
+        <div>
+          <input id="pbStartPID" type="button" value="Start" onclick="StartRegelaar();" disabled/>
+          <input id="pbStopPID"  type="button" value="Stop" onclick="StopRegelaar();" disabled />
+          <label><input type='checkbox' onclick='StartGetMeasurements(this);'>Get Measurements</label>
         </div> 
-      </div>
-      <div>
-        Temperatuur: 
-        Process Value: <input readonly type="number" id="TemperatuurPV" value="0.0"> 
-        SetPoint     : <input type="number" step="0.1" id="TemperatuurSP" value="0.0">
-        <input type="submit" value="Submit" onclick="SetTemperatuur();" />
-      </div>
-      <div>
-        <input type="submit" value="Start" onclick="StartRegelaar();" />
-        <input type="submit" value="Stop" onclick="StopRegelaar();" />
-      </div id="tempChart"> 
-      <div style="height: 500px">
-         <canvas id="myChart"></canvas>
-      </div>      
+        <canvas id="myChart"></canvas>
+      </div>   
    </body>
 </html>
