--- a/Maischer/MaischerClient.html
+++ b/Maischer/MaischerClient.html
@@ -16,12 +16,14 @@
             <tr> <td>P</td> <td><input type="text" id="Configuration_P"></td></tr>
             <tr> <td>I</td> <td><input type="text" id="Configuration_I"></td></tr>
             <tr> <td>D</td> <td><input type="text" id="Configuration_D"></td></tr>
-            <tr> <td>NrOfSteps</td> <td><input readonly type="text" id="Configuration_NrOfSteps"></td></tr>
+            <tr> <td>StepsPerRevolution</td> <td><input readonly type="text" id="Configuration_StepsPerRevolution"></td></tr>
           </table>
-          <input id="pbApplyConfiguration"  type="button" value="Apply"  onclick="SetConfiguration();" />
-          <input id="pbSaveConfiguration"   type="button" value="Save"   onclick="SaveConfiguration();" />
-          <input id="pbReloadConfiguration" type="button" value="Reload" onclick="ReloadConfiguration();" />
-          <input id="pbCloseConfiguration"  type="button" value="Close"  onclick="CloseConfiguration();" />
+          <div>
+            <input id="pbApplyConfiguration"  type="button" value="Apply"  onclick="SetConfiguration();" />
+            <input id="pbSaveConfiguration"   type="button" value="Save"   onclick="SaveConfiguration();" />
+            <input id="pbReloadConfiguration" type="button" value="Reload" onclick="ReloadConfiguration();" />
+            <input id="pbCloseConfiguration"  type="button" value="Close"  onclick="CloseConfiguration();" />
+          </div>
         </div>
       </div>
 
@@ -33,14 +35,22 @@
           <input id="pbShowConfiguration" type="button" value="Show Configuration" disabled/>
         </div>      
         <div>
+          Motor Angle: 
+          Process Value: <input readonly type="text" id="MotorAnglePV" value="0"> 
+          SetPoint     : <input type="number" step="1" id="MotorAngleSP" value="0">
+          <input type="submit" value="Submit" onclick="SetMotorAngle();" />
+          <input type="submit" value="Set as Zero" onclick="ZeroMotorAngle();" />
+        </div>       
+        <div>
           Temperature: 
-          Process Value: <input readonly type="number" id="TemperaturePV" value="0.0"> 
+          Process Value: <input readonly type="text" id="TemperaturePV" value="0.0"> 
           SetPoint     : <input type="number" step="0.1" id="TemperatureSP" value="0.0">
           <input type="submit" value="Submit" onclick="SetTemperature();" />
         </div>
         <div>
           <input id="pbStartPID" type="button" value="Start" onclick="StartRegelaar();" disabled/>
-          <input id="pbStopPID"  type="button" value="Stop" onclick="StopRegelaar();" disabled />
+          <input id="pbStartPID" type="button" value="Pauze" onclick="StartRegelaar();" disabled/>
+          <input id="pbStopPID"  type="button" value="Finish" onclick="StopRegelaar();" disabled />
           <label><input type='checkbox' onclick='StartGetMeasurements(this);'>Get Measurements</label>
         </div> 
         <canvas id="myChart"></canvas>
